Add exercise 4, "All Countries or No Country"

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" id="lookup">
                     Lookup
                 </button>
+                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox">
+                    <input type="checkbox" id="checkbox" class="mdl-checkbox__input" name="all">
+                    <span class="mdl-checkbox__label">All Countries</span>
+                </label>
             </div>
     
             <div id="result">
